--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es5",
     "module": "esnext",
     "lib": [
       "dom"
@@ -19,9 +19,10 @@
     "isolatedModules": true,
     "baseUrl": "./src"
   },
+  "exclude": ["node_modules", "**/node_modules/*"],
   "include": [
     "src",
     "babel.config.js",
-    "webpack.config.js"
+    ".babelrc"
   ]
 }
