--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "oritalk-web",
   "version": "0.1.0",
+  "homepage": "http://oriflow.github.io/oritalk-web",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.1.4",
@@ -32,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -66,6 +69,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
