--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-table": "^7.6.3",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
@@ -54,6 +55,7 @@
     "@babel/plugin-transform-react-jsx": "^7.12.12",
     "@svgr/webpack": "^5.5.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-table": "^7.0.28",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "babel-eslint": "^10.1.0",
