--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "apisauce": "^2.0.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^3.2.1",
     "react": "^17.0.1",
