--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apisauce": "^2.0.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^3.2.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
